Remove attestation storage
