# openapi.yaml
@@ -380,13 +380,6 @@ definitions:
         integratedTime:
           type: integer
           description: The time the entry was added to the log as a Unix timestamp in seconds
-        attestation:
-          type: object
-          properties:
-            data:
-              format: byte
-
-          format: byte
         verification:
           type: object
           properties:
